[package]
name = "printer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

icon = { workspace = true }
pattern = { workspace = true }
types = { workspace = true }
utils = { workspace = true }

[target.'cfg(not(windows))'.dev-dependencies]
rayon = { workspace = true }
termion = "1.5.1"
filter = { workspace = true }
