[package]
name = "printer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

icon = { workspace = true }
pattern = { workspace = true }
types = { workspace = true }
utils = { workspace = true }

[target.'cfg(not(windows))'.dev-dependencies]
filter = { workspace = true }
rayon = { workspace = true }
termion = { workspace = true }
