[package]
name = "rpc"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
# tokio = { version = "1.19", features = ["rt", "sync"] }
tracing = "0.1"
rmpv = { version = "0.4", features = ["with-serde"] }
futures = "0.3"
bytes = "1.0"
tokio = { version = "1.19", features = ["full"] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
