[package]
name = "rpc"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "macros", "sync", "time"] }
tracing = { workspace = true }
lsp = { package = "lsp-types", version = "0.94" }
