[package]
name = "stdio_server"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.28"
log = "0.4"
serde = { package = "serde", version = "1.0",  features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking"] }
anyhow = "1.0"
structopt = "0.3"
once_cell = "1.4"
serde_json = "1.0"
crossbeam-channel = "0.4"
tokio = { version = "0.2.20", features = ["fs"] }
indicatif = "0.14.0"

icon = { path = "../icon" }
filter = { path = "../filter" }
pattern = { path = "../pattern" }
printer = { path = "../printer" }
utility = { path = "../utility" }
