[package]
name = "tree_sitter"
edition.workspace = true
version.workspace = true

[build-dependencies]
cc = "*"

[dependencies]
tree-sitter-core = { package = "tree-sitter", version = "0.20" }
tree-sitter-highlight = "0.20"
once_cell = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
toml = { workspace = true }
tracing = { workspace = true }
# tree-sitter-traversal = "0.1"

# Languages
tree-sitter-bash = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
tree-sitter-md = "0.1.7"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-toml = "0.20"

# Forked grammers
tree-sitter-dockerfile = { git = "https://github.com/liuchengxu/tree-sitter-dockerfile", rev = "be454233564871db713aab035e9cdc4c3ec572dc" }
tree-sitter-vim = { git = "https://github.com/liuchengxu/tree-sitter-vim", rev = "a001587c17ab24fdade5403eb6c4763460d6814c" }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"
tree-sitter-tags = "0.21"

[[bench]]
name = "benchmark"
harness = false
