[package]
name = "tree_sitter"
edition.workspace = true
version.workspace = true

[build-dependencies]
cc = "*"

[dependencies]
tree-sitter-core = { package = "tree-sitter", version = "0.23" }
tree-sitter-highlight = "0.23"
once_cell = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
toml = { workspace = true }
tracing = { workspace = true }
# tree-sitter-traversal = "0.1"

# Languages
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.23"
tree-sitter-md = "0.3.2"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
# tree-sitter-toml = "0.20"

# Forked grammers
tree-sitter-dockerfile = { git = "https://github.com/liuchengxu/tree-sitter-dockerfile", rev = "0f648be5fd233a9be3428ec12de66a8be2dce0b6" }
tree-sitter-vim = { git = "https://github.com/liuchengxu/tree-sitter-vim", rev = "a0abc5f3dd20cdc61c1a18136f9ed559d87b9a00" }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"
tree-sitter-tags = "0.23"

[[bench]]
name = "benchmark"
harness = false
