[package]
name = "upgrade"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
indicatif = "0.16"
tokio = { version = "1.19", features = ["fs", "macros", "rt", "io-util", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
