[package]
name = "upgrade"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
indicatif = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "io-util", "rt-multi-thread"] }
# Use `rustls-tls` instead of `default-tls` to not pull in the openssl dep, making the cross-compile easier.
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
