[package]
name = "upgrade"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
indicatif = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "io-util", "rt-multi-thread"] }
# Use `rustls-tls` instead of `default-tls` to not pull in the openssl dep, making the cross-compile easier.
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
